# whisper-silero-vad

./: CMakeLists.txt  log_mel_spectrogram.json  main.cpp
libs/: chunker.cpp  chunker.h  fex.cpp  fex.h  fex_original.h  fex_original.h.bak  logger.h
libs.bak/: chunker.cpp
model/: .gitmodules  CMakeLists.txt  README.md  config.cmake  package.json
model/cpp/: model.cc  model.h  translate.cc  translate.cc.bak2  translate.h
model/mlc_llm/: test_mlc_chat_whisper.ipynb
model/python/mlc_chat/cli/: gen_config.py
model/python/mlc_chat/interface/: gen_config.py
model/python/mlc_chat/model/: model.py  model_preset.py
model/python/mlc_chat/model/marian/: marian_loader.py  marian_model.py  marian_quantization.py
model/python/mlc_chat/model/whisper_tiny/: whisper_loader.py  whisper_model.py  whisper_quantization.py
silero/: silero-vad-iter.cpp  silero-vad-iter.h  wav.h
silero-vad/: CMakeLists.txt
silero-vad/data/: silero-vad.pt
silero-vad/src/: silero-vad-iter.cpp  wav.h
